app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-spring-app-ive
  namespace: gitops-ive
  labels:
    app: app-spring-app-ive
    app.kubernetes.io/component: web
    app.kubernetes.io/instance: app-spring-app-ive
    app.kubernetes.io/name: app-spring-app-ive
    app.kubernetes.io/part-of: app-spring-app-ive
    app.openshift.io/runtime: java
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-spring-app-ive
  template:
    metadata:
      labels:
        app: app-spring-app-ive
    spec:
      containers:
        - name: app-spring-app-ive
          image: quay.io/siamaksade/spring-petclinic:main
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8778
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 45
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 45
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
