app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-spring-app-ive
  namespace: gitops-ive
  labels:
    app: app-spring-app-ive
spec:
  type: ClusterIP
  selector:
    app: app-spring-app-ive
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
    - name: 8778-tcp
      port: 8778
      protocol: TCP
      targetPort: 8778
