app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: app-spring-app-ive
  name: app-spring-app-ive
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: app-spring-app-ive
    weight: 100
